--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: var(--font-poppins);
+  padding: 80px 0 0;
+  color: #2e2e32;
+}
+
+h4 {
+  font-family: var(--font-mulish);
+}
