--- a/app/components/Header.css
+++ b/app/components/Header.css
@@ -1,30 +1,21 @@
 .header {
-  width: 100%;
-  height: 80px;
-  box-shadow: 0 0 5px 0.5px rgba(0, 0, 0, 0.3);
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: fixed;
-  background-color: white;
-  z-index: 999;
   top: 0;
-  left: 0;
-}
-
-.navbar {
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  width: 330px;
+  padding: 25px 30px;
+  gap: 2rem;
+  z-index: 999;
+  background: #fff;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.3);
 }
 
 .logo {
-  font-size: larger;
+  font-size: 20px;
   font-weight: bold;
-  cursor: pointer;
 }
 
 .menu {
-  font-size: xx-large;
-  cursor: pointer;
+  font-size: 32px;
 }
