--- a/app/components/Hero.css
+++ b/app/components/Hero.css
@@ -15,8 +15,20 @@
 
 .hero_title {
   font-size: 40px;
-  font-weight: bolder;
-  margin: 20px 0;
+  font-weight: 600;
+  margin: 2rem 0;
+  color: #2d2e32;
+}
+
+.hero_title,
+.hero_article {
+  text-align: center;
+}
+
+.hero-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .hero_article {
@@ -25,17 +37,12 @@
   margin-bottom: 50px;
 }
 
-.hero_article,
-.hero_title {
-  text-align: center;
-}
-
 .nav {
   width: 100%;
   display: flex;
   justify-content: center;
   gap: 1.6rem;
-  margin-bottom: 80px;
+  margin-bottom: 60px;
 }
 
 :hover.nav_link {
