--- a/app/components/Contact.css
+++ b/app/components/Contact.css
@@ -1,18 +1,33 @@
 .contact-section {
   width: auto;
-  height: 600px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  height: max-content;
   padding: 80px 17px;
+}
+
+.contact-section,
+.contact-detail,
+.subcontact-box {
+  gap: 1.6rem;
+}
+
+.contact-section,
+.contact-box,
+.subcontact-box,
+.contact-detail,
+.icon-box {
+  display: flex;
+  align-items: center;
+}
+
+.contact-section,
+.contact-box,
+.subcontact-box,
+.contact-detail {
+  flex-direction: column;
 }
 
 .contact-box {
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: space-evenly;
   width: 356px;
   height: 112px;
@@ -20,28 +35,15 @@
 
 .subcontact-box {
   margin-top: 10px;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
   text-align: center;
-  gap: 20px;
-}
-
-.contact-detail {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: center;
 }
 
 .icon-box {
   width: 50px;
   height: 50px;
   border-radius: 100px;
-  display: flex;
   justify-content: center;
-  align-items: center;
   box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -59,4 +61,30 @@
 .icon-detail {
   font-size: 17px;
   color: #767676;
+}
+
+@media (min-width: 760px) {
+  .subcontact-box {
+    flex-direction: row;
+  }
+
+  .contact-section,
+  .contact-box {
+    align-items: flex-start;
+  }
+
+  .contact-section {
+    justify-content: flex-start;
+    padding: 50px 50px;
+  }
+
+  .contact-detail {
+    flex-direction: row;
+  }
+
+  .text-contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
