--- a/app/components/Footer.css
+++ b/app/components/Footer.css
@@ -20,3 +20,10 @@
 :hover.icon-footer {
   fill: #7bb9ff;
 }
+
+@media (min-width: 760px) {
+  .footer-section {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
