Make reponsive suport in Hero section for Desktop

--- a/app/components/Hero.css
+++ b/app/components/Hero.css
@@ -2,9 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px 17px 0;
-  height: 1100px;
+  padding: 50px 17px;
+  height: 100%;
   background-color: #f9f9f9;
+}
+
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .hero_pic {
@@ -54,13 +60,14 @@
   font-size: 17px;
   border-bottom: 2px solid;
   font-weight: bold;
-  padding-bottom: 5px;
-  margin-bottom: 20px;
+  text-align: center;
+  padding: 0 0 5px;
+  margin: 0 100px 20px;
 }
 
 @media (min-width: 760px) {
   .hero {
-    padding: 40px 119px 0;
+    padding: 50px 119px 50px;
   }
 
   .hero_pic {
@@ -70,5 +77,49 @@
 
   .hero_title {
     font-size: 50px;
+  }
+
+  .tech-stack {
+    margin: 0 310px 20px;
+  }
+}
+
+@media (min-width: 1360px) {
+  .hero {
+    padding: 150px 300px;
+    display: flex;
+  }
+
+  .hero-text {
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 0;
+    gap: 1.6rem;
+  }
+
+  .hero-page {
+    align-items: flex-start;
+    padding-right: 30px;
+  }
+
+  .hero_title,
+  .hero_article {
+    text-align: start;
+  }
+
+  .nav {
+    justify-content: flex-start;
+  }
+
+  .skill {
+    display: flex;
+    align-items: center;
+  }
+
+  .tech-stack {
+    border-bottom: 0;
+    border-right: 2px solid;
+    padding: 0 20px 0 0;
+    margin: 0 50px 0 0;
   }
 }
