Make responsive support all content for Desktop

--- a/app/components/Header.css
+++ b/app/components/Header.css
@@ -63,6 +63,11 @@
     display: none;
   }
 
+  .menu {
+    position: fixed;
+    right: -500px;
+  }
+
   .navbar-pc {
     display: flex;
     align-items: center;
