--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: var(--font-poppins);
-  padding: 80px 0 0;
   color: #2e2e32;
 }
 
